# cryptvault

./: .gitignore  LICENSE  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
.github/workflows/: ci.yml  release.yml
app/: globals.css  layout.tsx  page.tsx
app/components/: AnimatedBackground.tsx  Button.tsx  CreateVolume.tsx  EncryptFiles.tsx  Field.tsx  MountVolume.tsx  PasswordStrength.tsx  Settings.tsx  Sidebar.tsx  Splash.tsx  Titlebar.tsx  VaultBrowser.tsx
app/lib/: store.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: commands.rs  error.rs  lib.rs  main.rs  state.rs
src-tauri/src/crypto/: cascade.rs  cipher.rs  kdf.rs  mod.rs
src-tauri/src/files/: encrypt.rs  mod.rs
src-tauri/src/volume/: create.rs  entries.rs  header.rs  mod.rs  mount.rs
