[package]
name = "cryptvault"
version = "0.1.0"
description = "Cross-platform encrypted volume and file vault"
authors = ["cryptvault contributors"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "cryptvault_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
parking_lot = "0.12"
rand = "0.8"
rand_chacha = "0.3"
zeroize = { version = "1.8", features = ["zeroize_derive"] }
argon2 = { version = "0.5", features = ["std", "zeroize"] }
aes-gcm = { version = "0.10", features = ["std"] }
chacha20poly1305 = { version = "0.10", features = ["std"] }
sha2 = "0.10"
hkdf = "0.12"
hex = "0.4"
walkdir = "2"
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "5"
once_cell = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
